<resources>
    <string name="app_name">Feed Me</string>
    <string name="one_cuisine_type">One Cuisine Type</string>
    <string name="rating">Rating</string>
    <string name="foodtruck_name">Foodtruck Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="find_foodtrucks">Find Foodtrucks</string>
    <string name="feedme">FeedMe</string>
    <string name="view_on_yelp">View on Yelp</string>
    <string name="_503_223_1282">(503) 223-1282</string>
    <string name="_123_sw_best_ever_ave_portland_oregon_97222">123 SW Best Ever Ave. Portland, Oregon, 97222</string>
    <string name="_4_5_5">4.5/5</string>
    <string name="brunch_american">Brunch, American</string>
    <string name="foodtruckname">Foodtruck Name</string>
    <string name="save_foodtruck">Save Foodtruck</string>
</resources>
