<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.epicodus.feedme.ui.FoodtruckDetailFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:id="@+id/foodtruckImageView"
            android:src="@drawable/food"
            android:scaleType="centerCrop"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foodtruckname"
                android:id="@+id/foodtruckNameTextView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4.5/5"
                android:id="@+id/ratingTextView"
                android:layout_alignTop="@+id/foodtruckNameTextView"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brunch_american"
                android:id="@+id/cuisineTextView"
                android:layout_below="@+id/foodtruckNameTextView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="italic" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_above="@+id/saveFoodtruckButton"
                android:paddingLeft="30dp"
                android:paddingTop="20dp"
                android:paddingRight="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/websiteTextView"
                    android:drawableLeft="@drawable/ic_exit_to_app_white_24dp"
                    android:drawablePadding="4dp"
                    android:text="@string/view_on_yelp"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    tools:ignore="RtlHardcoded"  />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_503_223_1282"
                    android:id="@+id/phoneTextView"
                    android:drawableLeft="@drawable/ic_local_phone_white_24dp"
                    android:drawablePadding="4dp"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    tools:ignore="RtlHardcoded"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_123_sw_best_ever_ave_portland_oregon_97222"
                    android:drawableLeft="@drawable/ic_map_white_24dp"
                    android:drawablePadding="4dp"
                    android:id="@+id/addressTextView"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical"
                    tools:ignore="RtlHardcoded"/>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_foodtruck"
                android:id="@+id/saveFoodtruckButton"
                android:layout_alignParentBottom="true"
                android:background="@color/colorAccent"
                android:textColor="@color/colorTextIcons"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>
